--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ MPRI website</a>.</p>
     Aseem Rastogi,
     Nikhil Swamy, and
     Santiago Zanella-Béguelin.
-    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: : Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
     arXiv:1703.00055, July 2017.
   </li>
 
