--- a/publications.html
+++ b/publications.html
@@ -144,8 +144,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Aseem Rastogi, and
     Nikhil Swamy.
     <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
-    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
-    To appear, January 2017.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+    pages 515--529. ACM, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -156,8 +156,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Benjamin C. Pierce,
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
-    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>.
-    To appear, January 2017.
+    In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+    pages 114--129. ACM, January 2017. 
   </li>
 
   <li style="margin-bottom: 1ex;">
