--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting 2017</a> (Co-organizer)
-  <ul>
-  <li>Workshop at POPL: 15 January 2017, Paris, France</li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting 2017</a> (Co-organizer) -->
+  <!-- <ul> -->
+  <!-- <li>Workshop at POPL: 15 January 2017, Paris, France</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://csf2016.tecnico.ulisboa.pt/">Computer Security Foundations, CSF 2016</a> (PC member) -->
   <!-- <ul> -->
