--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker)
+  <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker, <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a>)
   <ul>
-  <li>Conference: June 19-21 2017, University of Kent, Canterbury, UK</li>
+  <!-- <li>Conference: June 19-21 2017, University of Kent, Canterbury, UK</li> -->
   </ul>
   </li>
 
@@ -279,7 +279,7 @@ could contribute:
 
 <ul>
   <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a>
-(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/secomp-mpri.pdf">topics</a>;
+(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2017/secomp-mpri.pdf">topics</a>;
  <a href="https://secure-compilation.github.io/#relevant-publications">papers</a>)
   </li>
   <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
