--- a/students.html
+++ b/students.html
@@ -18,6 +18,8 @@
 
 <h1>C&#259;t&#259;lin Hri&#355;cu</h1>
 
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li> -->
+
 <h2>Advised Students</h2>
 
 <ul style="width:42em; text-align: left">
