--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ MPRI website</a>.</p>
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2018</a></em></a> 
 
     <ul style="font-size: small">
       <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
