--- a/publications.html
+++ b/publications.html
@@ -384,11 +384,22 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
-            arXiv:1705.07354, May 2017.
+            arXiv:1705.07354, August 2017.
   <ul style="font-size: small">
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Danel Ahman,
+            Cédric Fournet,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Kenji Maillard,
+            Aseem Rastogi, and
+            Nikhil Swamy.
+    <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
+            arXiv:1707.02466, July 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -398,11 +409,12 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     C&#259;t&#259;lin Hri&#355;cu,
     Matteo Maffei,
     Jonathan Protzenko,
+    Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy, and
     Santiago Zanella-Béguelin.
-    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
-    arXiv:1703.00055, February 2017.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
+    arXiv:1703.00055, July 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
