--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
   <ul>
-  <li>Submission deadline: August 15, 2017</li>
+  <!-- <li>Submission deadline: August 15, 2017</li> -->
   <li>Conference: April 24-26, 2018, London, United Kingdom</li>
   </ul>
   </li>
