--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Research Cambridge</a>.</p>
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <!-- <li>Submission deadline: 7 July 2017</li> -->
-  <li>Conference: 8-13 January 2018, Los Angeles</li>
+  <li>Conference: 8-13 January 2018, Los Angeles, USA</li>
   </ul>
   </li>
 
