--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Intern, MIT)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visitor, University of Virginia)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visitor, University of Virginia)</li> -->
 
 </ul>
 
