--- a/index.html
+++ b/index.html
@@ -584,6 +584,8 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex"><em><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">What is secure compilation?</a></em> at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">SCM 2017</a>.
+
   <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
 
     <ul style="font-size: small">
