--- a/index.html
+++ b/index.html
@@ -584,7 +584,13 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex"><em><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">What is secure compilation?</a></em> at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">SCM 2017</a>.
+  <li style="margin-bottom: 1ex"><em><a href="https://popl17.sigplan.org/event/scm-2017-what-is-secure-compilation-part-ii">What is secure compilation?</a></em>.
+    <ul style="font-size: small">
+      <li>Short talk at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">SCM 2017</a>:
+          <a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">slides</a> (2016-03-30)
+      </li>
+    </ul>
+  </li>
 
   <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
 
