--- a/index.html
+++ b/index.html
@@ -628,6 +628,23 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
   </li>
 
+  <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
+    <ul style="font-size: small">
+
+      <li><a href="http://cufp.org/2015/">
+          Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
+      </li>
+
+      <li><a href="http://popl.mpi-sws.org/2015/tutorials2.html#t2">
+          Symposium on Principles of Programming Languages (POPL)</a> (2015-01-13)
+      </li>
+
+      <li><a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
+      </li>
+
+    </ul>
+  </li>
+
 </ul>
 
 <h2 id="tools">Software Tools</h2>
