--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a>)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a></b>
     <ul style="font-size: small">
 
       <li><a href="http://cufp.org/2015/">
