--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Verifying Cryptographic Implementations with F*</a></b> course at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school, Aarhus, Denmark, 2-4 October 2017
+  <li style="margin-bottom: 1ex;"><b><a href="">Verifying Cryptographic Implementations with F*</a></b> course at<br/><a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school, Aarhus, Denmark, 2-4 October 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, 10-13 July 2017
