--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="">Verifying Cryptographic Implementations with F*</a></b> course at<br/><a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school, Aarhus, Denmark, 2-4 October 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, 10-13 July 2017
+  <li style="margin-bottom: 1ex;"><b><a href="file:///home/hritcu/Projects/fstar/priv/courses/nancy2017/index.html">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, 10-13 July 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
