--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Verifying Cryptographic Implementations with F*</a></b> course at<br/><a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school, Aarhus, Denmark, 2-4 October 2017
+  <li style="margin-bottom: 1ex;"><b>Upcoming F* course at<br/><a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a>
+  <ul>
+  <li>Summer School: October 2-4, 2017, Aarhus, Denmark
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
