--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming F* course at<br/><a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming F* course at<br/><a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a></b>
   <ul>
   <li>Summer School: October 2-4, 2017, Aarhus, Denmark
   </ul>
