--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>What's new in F\*?</em></a> 
+  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> 
 
     <ul style="font-size: small">
       <li><b>Recent</b>: Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
