--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming F* course at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a></b>
+  <li style="margin-bottom: 1ex;"><b>Upcoming <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a></b>
   <ul>
   <li>Summer School: October 2-4, 2017, Aarhus, Denmark
   </ul>
