--- a/index.html
+++ b/index.html
@@ -80,12 +80,6 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school</b>
-  <ul>
-  <li>Summer School: October 2-4, 2017, Aarhus, Denmark
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
   <ul>
   <!-- <li>Submission deadline: August 15, 2017</li> -->
@@ -123,6 +117,8 @@ Research Cambridge</a>.</p>
   <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker, <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a>)
   <ul>
@@ -626,6 +622,9 @@ MPRI website</a>.</p>
 <p>Here are my recent courses. For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school</b>. Aarhus, Denmark, October 2-4, 2017
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, 10-13 July 2017
   </li>
