--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
     Principles of Programming Languages, POPL 2017</a>
     (PC member)
-  <ul>
+  <!-- <ul> -->
   <!-- <li>Abstract deadline: 1 July 2016</li> -->
   <!-- <li>Submission deadline: 6 July 2016</li> -->
-  <li>Conference: 18-20 January 2017, Paris, France</li>
-  </ul>
+  <!-- <li>Conference: 18-20 January 2017, Paris, France</li> -->
+  <!-- </ul> -->
   </li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust, -->
@@ -148,10 +148,10 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/">
     IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
     (General Chair)
-  <ul>
+  <!-- <ul> -->
   <!-- <li>Submission deadline: 4 August 2016</li> -->
-  <li>Conference: 26-28 April 2017, Paris, France</li>
-  </ul>
+  <!-- <li>Conference: 26-28 April 2017, Paris, France</li> -->
+  <!-- </ul> -->
   </li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting 2017</a> (Co-organizer) -->
