--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, <!-- 16-27 --> March 2015
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a></b>
