--- a/index.html
+++ b/index.html
@@ -384,13 +384,13 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Intern)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li>
-
   <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Intern, MIT)</li>
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visitor, University of Virginia)</li> -->
 
