--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ MPRI website</a>.</p>
             Aseem Rastogi, and
             Nikhil Swamy.
     <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            arXiv:1707.02466, July 2017.
+            Conditionally Accepted at POPL, July 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
