--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC 2018</b></a> (PC Chair, Co-organizer)
   <ul>
-  <!-- <li>Submission deadline: 7 July 2017</li> -->
-  <li>Workshop at POPL: January 18, 2018, Los Angeles, USA</li>
+  <li>Submission deadline: 18 October 2018</li>
+  <li>Workshop at POPL: 18 January 2018, Los Angeles, USA</li>
   </ul>
   </li>
 
