--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
   <ul>
-  <!-- <li>Abstract deadline: 14 October 2016</li> -->
-  <!-- <li>Submission deadline: 21 October 2016</li> -->
+  <li>Abstract deadline: 13 October 2017</li>
+  <li>Submission deadline: 20 October 2017</li>
   <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
   </ul>
   </li>
