--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ MPRI website</a>.</p>
 
 </ul>
 
-<p>For a complete list of past members of my group please look <a href="students.html">here</a>.</p>
+<p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
 
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
