--- a/students.html
+++ b/students.html
@@ -18,9 +18,7 @@
 
 <h1>C&#259;t&#259;lin Hri&#355;cu</h1>
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li> -->
-
-<h2>Advised Students</h2>
+<h2>Current Group Members</h2>
 
 <ul style="width:42em; text-align: left">
 
@@ -47,6 +45,18 @@
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li>
+</ul>
+
+
+<h2>Current Group Members</h2>
+
+<ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visitor, University of Virginia)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://yannis.computer/">Yannis Juglaret</a>
   <ul>
