--- a/students.html
+++ b/students.html
@@ -52,7 +52,13 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Intern)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northestern University)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://aaronweiss.us/">Aaron Weiss</a> (Visiting Researcher, Northestern University)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northestern University)</li>
 
 </ul>
 
