--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northeastern University)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://aaronweiss.us/">Aaron Weiss</a> (Visiting Researcher, Northeastern University)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
+
 </ul>
 
 <p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
