--- a/students.html
+++ b/students.html
@@ -54,11 +54,11 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Intern)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northestern University)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northeastern University)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://aaronweiss.us/">Aaron Weiss</a> (Visiting Researcher, Northestern University)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://aaronweiss.us/">Aaron Weiss</a> (Visiting Researcher, Northeastern University)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northestern University)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
 
 </ul>
 
