--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Intern)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northeastern University)</li>
 
