--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,17 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Danel Ahman,
+            Cédric Fournet,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Kenji Maillard,
+            Aseem Rastogi, and
+            Nikhil Swamy.
+    <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
+            Conditionally Accepted at POPL'18, July 2017.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jonathan Protzenko,
     Jean-Karim Zinzindohoué,
     Aseem Rastogi,
@@ -390,17 +401,6 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
   </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-            Danel Ahman,
-            Cédric Fournet,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Kenji Maillard,
-            Aseem Rastogi, and
-            Nikhil Swamy.
-    <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            arXiv:1707.02466, July 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
