--- a/publications.html
+++ b/publications.html
@@ -265,7 +265,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol style="width:42em; text-align: left">
+<ol start="21" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
     Leonidas Lampropoulos,
