--- a/publications.html
+++ b/publications.html
@@ -325,9 +325,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <h3>Book</h3>
 <ol start="26" style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Chris Casinghino, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <a href="http://www.cis.upenn.edu/~bcpierce/sf/">Software Foundations</a>, Electronic textbook, 2012.</li>
+  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <a href="http://www.cis.upenn.edu/~bcpierce/sf/">Software Foundations</a>, Electronic textbook, 2017.</li>
 </ol>
-
 
 <!-- <h3>Refereed Workshop Papers</h3> -->
 <!-- <ol start="24" style="width:42em; text-align: left"> -->
