--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
   <ul>
   <!-- <li>Submission deadline: August 15, 2017</li> -->
-  <li>Conference: April 24-26, 2018, London, United Kingdom</li>
+  <li>Conference: 24-26 April, 2018, London, United Kingdom</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
   <ul>
-  <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
+  <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li>
   </ul>
   </li>
 
