--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school</li>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker, <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a>)
   <ul>
