--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li>
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">EPIT 2018 Software Verification Spring School</b></a> (Co-Organizer)
+  <ul>
+  <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://projects.lsv.fr/epit18/?page_id=49">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">EPIT 2018 Software Verification Spring School</a> in <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker, <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a>)
   <ul>
