--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://projects.lsv.fr/epit18/?page_id=49">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">EPIT 2018 Software Verification Spring School</a></b> in <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a>
   <ul>
-  <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li>
+  <li>School: 7-11 May, 2018, Schloss Dagstuhl, Germany</li>
   </ul>
   </li>
 
