--- a/index.html
+++ b/index.html
@@ -411,6 +411,30 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Deepak Garg,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Cătălin Hriţcu,
+            Marco Patrignani,
+            Marco Stronati, and
+            David Swasey.
+    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract).</a></b>.
+            To be presented at <a href="https://popl18.sigplan.org/track/prisc-2018">PriSC</a>, January 2018.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Guglielmo Fachini,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Marco Stronati,
+            Ana Nora Evans,
+            Théo Laurent,
+            Arthur Azevedo de Amorim,
+            Benjamin C. Pierce, and
+            Andrew Tolmach.
+    <b><a href="">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
+            To be presented at <a href="https://popl18.sigplan.org/track/prisc-2018">PriSC</a>, January 2018.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Arthur Azevedo de Amorim,
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
@@ -430,7 +454,7 @@ MPRI website</a>.</p>
             Aseem Rastogi, and
             Nikhil Swamy.
     <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            Conditionally Accepted at POPL'18, July 2017.
+            To appear at <a href="https://popl18.sigplan.org">POPL</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -445,7 +469,7 @@ MPRI website</a>.</p>
     Nikhil Swamy, and
     Santiago Zanella-Béguelin.
     <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
-    arXiv:1703.00055, October 2017.
+    To appear at <a href="https://popl18.sigplan.org/track/CPP-2018">CPP</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
