--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ MPRI website</a>.</p>
             Marco Stronati, and
             David Swasey.
     <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract).</a></b>.
-            To be presented at <a href="https://popl18.sigplan.org/track/prisc-2018">PriSC</a>, January 2018.
+            To be presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -431,7 +431,7 @@ MPRI website</a>.</p>
             Benjamin C. Pierce, and
             Andrew Tolmach.
     <b><a href="">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
-            To be presented at <a href="https://popl18.sigplan.org/track/prisc-2018">PriSC</a>, January 2018.
+            To be presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -454,7 +454,7 @@ MPRI website</a>.</p>
             Aseem Rastogi, and
             Nikhil Swamy.
     <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            To appear at <a href="https://popl18.sigplan.org">POPL</a>, January 2018.
+            To appear at the <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -469,7 +469,7 @@ MPRI website</a>.</p>
     Nikhil Swamy, and
     Santiago Zanella-Béguelin.
     <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
-    To appear at <a href="https://popl18.sigplan.org/track/CPP-2018">CPP</a>, January 2018.
+    To appear at the <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
