--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ MPRI website</a>.</p>
             Marco Patrignani,
             Marco Stronati, and
             David Swasey.
-    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract).</a></b>.
+    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
             To be presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
