--- a/index.html
+++ b/index.html
@@ -544,32 +544,32 @@ MPRI website</a>.</p>
     pages 114--129. ACM, January 2017. 
   </li>
 
-  <li style="margin-bottom: 1ex;">
-     Alejandro Aguirre,
-     C&#259;t&#259;lin Hri&#355;cu,
-     Chantal Keller,
-     and Nikhil Swamy.
-  <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
-  Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--    Alejandro Aguirre, -->
+  <!--    C&#259;t&#259;lin Hri&#355;cu, -->
+  <!--    Chantal Keller, -->
+  <!--    and Nikhil Swamy. -->
+  <!-- <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>. -->
+  <!-- Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016. -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;">
-            Yannis Juglaret,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Arthur Azevedo de Amorim,
-            Boris Eng, and
-            Benjamin C. Pierce.
-    <b><a href="http://arxiv.org/abs/1602.04503">
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--           Yannis Juglaret, -->
+  <!--           C&#259;t&#259;lin Hri&#355;cu, -->
+  <!--           Arthur Azevedo de Amorim, -->
+  <!--           Boris Eng, and -->
+  <!--           Benjamin C. Pierce. -->
+  <!--   <b><a href="http://arxiv.org/abs/1602.04503"> -->
 
-          Beyond Good and Evil: Formalizing the Security Guarantees
-                                of Compartmentalizing Compilation</a></b>.
-          <a href="http://csf2016.tecnico.ulisboa.pt/">In 29th IEEE Symposium on Computer Security Foundations (CSF)</a>.
-          pages 45-60. IEEE Computer Society Press, July 2016.
-          (arXiv:1602.04503)
-  <ul style="font-size: small">
-    <li>A draft version of the paper was entitled Beyond Full Abstraction</li>
-  </ul>
-  </li>
+  <!--         Beyond Good and Evil: Formalizing the Security Guarantees -->
+  <!--                               of Compartmentalizing Compilation</a></b>. -->
+  <!--         <a href="http://csf2016.tecnico.ulisboa.pt/">In 29th IEEE Symposium on Computer Security Foundations (CSF)</a>. -->
+  <!--         pages 45-60. IEEE Computer Society Press, July 2016. -->
+  <!--         (arXiv:1602.04503) -->
+  <!-- <ul style="font-size: small"> -->
+  <!--   <li>A draft version of the paper was entitled Beyond Full Abstraction</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 </ul>
 
 
