--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ MPRI website</a>.</p>
             Arthur Azevedo de Amorim,
             Benjamin C. Pierce, and
             Andrew Tolmach.
-    <b><a href="">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
+    <b><a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
             To be presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
