--- a/index.html
+++ b/index.html
@@ -577,6 +577,10 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
+      <li><b>Recent:</b> <a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a>: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> 
 
     <ul style="font-size: small">
@@ -613,7 +617,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
+      <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
       <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
       <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
       <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
