--- a/index.html
+++ b/index.html
@@ -578,7 +578,9 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
+    <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a>: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> 
