--- a/students.html
+++ b/students.html
@@ -28,15 +28,6 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
-  <ul>
-    <li style="margin-top: 1ex;">PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
-    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
-      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
-    </li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li>
-
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
     <li style="margin-top: 1ex;">PhD Student at National University of Rosario since 2017-04, external co-supervisor</li>
@@ -66,6 +57,15 @@
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
+  <ul>
+    <li style="margin-top: 1ex;">PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
+    <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
+      <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc student at <a href="https://www.cylab.cmu.edu/">CMU</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Intern, MIT)</li>
 
