--- a/index.html
+++ b/index.html
@@ -577,7 +577,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a>: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
+      <li><b>Recent:</b> <a href="https://www.info.uaic.ro/bin/Main/">Infoiasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
+      <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a>: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
     </ul>
   </li>
 
