--- a/students.html
+++ b/students.html
@@ -71,7 +71,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visitor, University of Virginia)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visiting Researcher, University of Virginia)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li>
 
