--- a/index.html
+++ b/index.html
@@ -388,17 +388,17 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a> (Postdoctoral Researcher)</li>
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li> -->
+  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Intern)</li> -->
+  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northeastern University)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://aaronweiss.us/">Aaron Weiss</a> (Visiting Researcher, Northeastern University)</li>
-
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li> -->
 
 </ul>
 
