--- a/students.html
+++ b/students.html
@@ -39,7 +39,13 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a> (Postdoctoral Researcher)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher)</li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northeastern University)</li>
 
