--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
 
