--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@ could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
   </li>
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a>
-  (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>;
-   <a href="http://arxiv.org/abs/1409.0393">paper #1</a>,
-   <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>,
-   <a href="https://arxiv.org/abs/1607.05443">paper #3</a>,
-   <a href="https://github.com/QuickChick">code</a>)
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
+  <!-- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>; -->
+  <!--  <a href="http://arxiv.org/abs/1409.0393">paper #1</a>, -->
+  <!--  <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>, -->
+  <!--  <a href="https://arxiv.org/abs/1607.05443">paper #3</a>, -->
+  <!--  <a href="https://github.com/QuickChick">code</a>) -->
+  <!-- </li> -->
 </ul>
 
 <!--
@@ -717,6 +717,13 @@ Santiago Zanella-Béguelin,
 Jean-Karim Zinzindohoue)</li>
 
   <li style="margin-bottom: 1ex;">
+    <a href="https://github.com/micro-policies">Micro-Policies:
+      Formally Verified, Tag-Based Security Monitors</a>
+      (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
+       Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce,
+       Antal Spector-Zabusky, and Andrew Tolmach)</li>
+
+  <li style="margin-bottom: 1ex;">
     <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
     (with Leonidas Lampropoulos, Diane Gallois-Wong, 
      John Hughes, Benjamin C. Pierce, and Li-yao Xia)</li>
@@ -728,12 +735,6 @@ Jean-Karim Zinzindohoue)</li>
       (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
        and Benjamin C. Pierce)</li>
 
-  <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/micro-policies">Micro-Policies:
-      Formally Verified, Tag-Based Security Monitors</a>
-      (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
-       Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce,
-       Antal Spector-Zabusky, and Andrew Tolmach)</li>
 </ul>
 
 <h2 id="misc">Misc</h2>
