--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ In the fall of 2016 I held a Visiting Researcher position at
 
 <p style="width:42em; text-align: left"> I received my PhD
 <!--(summa cum laude)-->
-from <a href="http://www.cs.uni-saarland.de/index.php?lang=en">Saarland
+from <a href="https://saarland-informatics-campus.de/en/">Saarland
 University</a> in Saarbrücken, Germany, where I 
 <!-- was a member of
 the <a href="http://www.infsec.cs.uni-saarland.de/">Information
